--- a/index.html
+++ b/index.html
@@ -470,8 +470,6 @@
       <p>Made With Love By Figmaland All Right Reserved</p>
     </div>
 
-    <script>
-      // Burger menu toggle script
-    </script>
+    <script src="./script.js"></script>
   </body>
 </html>
