--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Sprivaten</title>
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="header__content">
         <h2 class="header__logo">Sprivaten</h2>
